<resources>
    <string name="app_name">TheCarDev</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_car_recode">行车记录仪</string>
    <string name="str_car_dog">车载电子狗</string>
    <string name="str_radio">收音机</string>
    <string name="str_nav">导航</string>
    <string name="str_bluetooth">蓝牙</string>
    <string name="str_setting">设置</string>
    <string name="str_bluetooth_setting">蓝牙设置</string>
    <string name="str_app_dir">应用文件夹</string>
    <string name="str_custom_app">自定义应用</string>
    <string name="str_fm_setting">FM</string>
    <string name="str_fm_custom_frq">自定义频段</string>
    <string name="str_app_setting">应用设置</string>
    <string name="str_ui_setting">界面设置</string>
    <string name="str_playback">回放功能</string>
    <string name="str_voice_setting">语言提示设置</string>
    <string name="str_cloud_dog_setting">云狗设置</string>
    <string name="str_init_time">2015-05-20 11:11</string>
    <string name="bluetooth_dial_top_title">蓝牙拨号</string>
    <string name="bluetooth_music_top_title">蓝牙音乐</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="description_voicemail_button">voicemail</string>
    <string name="bluetooth_contact">联系人</string>
    <string name="bluetooth_recent_call">最近通话</string>
    <string name="iflytek_text_begin">请开始说话&#8230;</string>
    <string name="home_nav">导航</string>
    <string name="home_number">拨号</string>
    <string name="home_photo">照片</string>
    <string name="home_video">视频</string>
    <string name="home_amusement">娱乐</string>
    <string name="home_car_record">行车记录</string>
    <string name="home_user">个人中心</string>
    <string name="status_time_pm">下午</string>
    <string name="status_time_am">上午</string>
    <string name="avin_camera_error">前置摄像头不存在或出现了故障</string>
    <string name="video_label">视频</string>
    <string name="car_record_label">行车记录</string>
    <string name="video_play_btn_desr">play or pause video button</string>
    <string name="video_default_time">00:00:00</string>
    <string name="back_to_main_home_toast">返回到主页面</string>
    <string name="file_label_total_video">全部视频</string>
    <string name="file_label_lock_video">已锁定的视频</string>
    <string name="folder_empty_label">这个文件夹是空的哦</string>
    <string name="fragment_myCenter">个人中心</string>
    <string name="folder_no_video">暂无视频</string>
    <string name="video_loading">正在加载中...</string>
    <string name="video_info_name">视频名称：</string>
    <string name="video_info_duration">时长：</string>
    <string name="video_info_size">大小：</string>
    <string name="video_info_format">格式：</string>
    <string name="video_storage_full_needto_clear">磁盘已满，正在清理磁盘空间，以便继续录像！</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="voice_show_more_message">显示更多消息</string>
    <string name="voice_show_moment">刚刚</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="voice_no_hear_sound">没有听到声音</string>
    <string name="voice_command_help">语音指令帮助</string>
    <string name="voice_help_command_instance">1.唤醒指令:XX\n2.打开导航:进入地图；\n3.打开视频：进入视频...\n ......\n显示所有语音指令及其对应的操作。</string>
    <string name="voice_help_list">语音指令列表：</string>
    <string name="voice_speak_command">请说指令，如“打开导航”</string>
    <string name="voice_no_voice">语音暂无</string>
    <string name="album_title">相册</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="no_photo">暂无照片</string>
    <string name="loading_photo">正在加载，请稍后！</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="delete_msg">是否要删除 “<Data><![CDATA[<font color="#1d8fe9">%1$s</font>]]></Data>” ？</string>
    <string name="photos_edit">编辑</string>
    <string name="delete_photo_msg">是否要删除选中的%1$s张照片?</string>
    <string name="photo_list">照片列表</string>
    <string name="user_list_item_fm">FM调频</string>
    <string name="user_list_item_bluetooth">蓝牙</string>
    <string name="user_list_item_cloud_dog">云狗</string>
    <string name="user_list_item_traffic">流量管理</string>
    <string name="user_list_item_system_settings">系统设置</string>
    <string name="user_tv1">精度提醒</string>
    <string name="tv_new_hand">新手</string>
    <string name="tv_old_hand">老手</string>
    <string name="tv_expert">专家</string>
    <string name="tv_bluet">配对码</string>
    <string name="tv_update">修改</string>
    <string name="tv_input_encod">请输入匹配码：</string>
    <string name="no_connect">是否断开蓝牙连接</string>
    <string name="tv_save_econd">确定修改本机匹配码吗？</string>
    <string name="tv_call_time">拨号中...</string>
    <string name="tv_call_number">18316626562</string>
    <string name="bt_index_a">A-G</string>
    <string name="bt_index_h">H-N</string>
    <string name="bt_index_o">O-T</string>
    <string name="bt_index_u">U-Z</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_plus">+</string>
    <string name="num_xing">*</string>
    <string name="num_zero">0</string>
    <string name="num_jing">#</string>
    <string name="tv_call_log">通话记录</string>
    <string name="tv_log_none">没有任何通话记录！</string>
    <string name="mhz_unit">Mhz</string>
    <string name="fm_87_50">87.50</string>
    <string name="fm_88_0">88.0</string>
    <string name="fm_108_00">108.00</string>
    <string name="weixin">微信</string>
    <string name="app">应用</string>
    <string name="app_version">V 1.0.0.8</string>
    <string name="china_mobile">中国移动</string>
    <string name="china_unicom">中国联通</string>
    <string name="china_telecom">中国电信</string>
    <string name="send">发送</string>
    <string name="reput">重新输入</string>
    <string name="prompt">提示</string>
    <string name="failed">失败</string>
    <string name="fetching_data">获取数据中,请稍后</string>
    <string name="day_after_tomorrow">后天</string>
    <string name="tomorrow">明天</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="day_before_yesterday">前天</string>
    <string name="load_more">显示更多…</string>
    <string name="dianping_provide">大众点评dianping.com</string>
    <string name="download">下载</string>
    <string name="downloading">下载中…</string>
    <string name="contact_format">姓名：%1$s\n号码：%2$s</string>
    <string name="poi_geo_null">很抱歉，该地点没有位置，无法为您打开地图</string>
    <string name="forward_sms_answer">转发%1$s的信息</string>
    <string name="send_sms_answer">给%1$s的%2$s号码发短信</string>
    <string name="view_source_web">查看网页</string>
    <string name="data_empty">暂无</string>
    <string name="send_sms_exception">短信功能异常，发送短信失败</string>
    <string name="loading_text">准备中,请稍等</string>
    <string name="help_title">使用帮助</string>
    <string name="preference_general_setting">通用设置</string>
    <string name="setting_help">使用帮助</string>
    <string name="talk_network_exception">没有找到可用的网络，您可以检查一下网络设置</string>
    <string name="talk_server_exception">好像网络不给力哦，要不您一会儿再试一下？</string>
    <string name="talk_communication_err">网络出了点状况，请稍候再试一下</string>
    <string name="talk_network_outtime">当前网络有点繁忙，请过会再试</string>
    <string name="mic_prepare">准备中...</string>
    <string name="mic_prepare_help">请问有什么可以帮助您？</string>
    <string name="mic_recording">正在倾听</string>
    <string name="mic_processing">识别中...</string>
    <string name="mic_idle">点击说话</string>
    <string name="initing">数据准备中，请稍等...</string>
    <string name="grammar_data_compile">正在初始化语音库...</string>
    <string name="memo">提醒</string>
    <string name="memo_list">提醒列表</string>
    <string name="to_do">待办</string>
    <string name="completed">已完成</string>
    <string name="close">关闭</string>
    <string name="missed_reminder_during_shutdown">不要忘记这些提醒哦：%s</string>
    <string name="missed_reminder">错过的提醒</string>
    <string name="reminder">提醒</string>
    <string name="memo_date_format">日期：%s</string>
    <string name="memo_time_format">时间：%s</string>
    <string name="memo_tostring_format">%1$s提醒您%2$s</string>
    <string name="delete_memo_prompt">确定删除吗？</string>
    <string name="memo_time_length_prompt_dd_hh_mm">%1$s天%2$s小时%3$s分钟</string>
    <string name="memo_time_length_prompt_hh_mm">%1$s小时%2$s分钟</string>
    <string name="memo_time_length_prompt_mm_ss">%1$s分%2$s秒</string>
    <string name="register_reminder_prompt">%s后提示</string>
    <string name="edit_datetime">编辑时间</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="memo_due_time_earlier_than_now">提醒时间早于现在哦</string>
    <string name="readable_time_yesterday">（昨天）</string>
    <string name="readable_time_day_before_yesterday">（前天）</string>
    <string name="readable_time_day_after_tomorrow">（后天）</string>
    <string name="readable_time_today">（今天）</string>
    <string name="readable_time_tomorrow">（明天）</string>
    <string name="three_days_later">（三天后）</string>
    <string name="four_days_later">（四天后）</string>
    <string name="five_days_later">（五天后）</string>
    <string name="six_days_later">（六天后）</string>
    <string name="seven_days_later">（七天后）</string>
    <string name="future">（未来）</string>
    <string name="wakeup_started">语音唤醒运行中</string>
    <string name="wakeup_started_prompt">您可以说 “你好魔方”，来唤醒语音识别</string>
    <string name="wakeup_command">说 “你好魔方” 就能呼出语音助手</string>
    <string name="wakeup_closed">语音唤醒已关闭</string>
    <string name="float_window_open">只在桌面和本应用界面显示</string>
    <string name="float_window_closed">悬浮窗已关闭</string>
    <string name="locating">正在定位中，请稍候…</string>
    <string name="open_map">打开地图</string>
    <string name="select_map">选择地图</string>
    <string name="amap">高德地图</string>
    <string name="baidu">百度地图</string>
    <string name="amap_with_bracket">(高德地图)</string>
    <string name="baidu_with_bracket">(百度地图)</string>
    <string name="geo_reverse">解析地址中…</string>
    <string name="locate_failed">很抱歉，获取当前位置失败，无法提供查询服务</string>
    <string name="current_city">当前城市</string>
    <string name="current_position">当前位置</string>
    <string name="unknown">未知</string>
    <string name="call_ok">立即拨打</string>
    <string name="call_cancel">取\t\t消</string>
    <string name="answer_call">接听电话</string>
    <string name="end_call">挂断电话</string>
    <string name="call_canceled">电话已挂断</string>
    <string name="call_receive">接听</string>
    <string name="call_reject">挂断</string>
    <string name="wifi_proxy_settings_save_btn">保存</string>
    <string name="wifi_proxy_settings_edit_agency_edt">baidu.com,taobao.com</string>
    <string name="wifi_proxy_settings_agency_tv">对以下网址不使用代理</string>
    <string name="wifi_proxy_settings_port_tv">端口</string>
    <string name="wifi_proxy_settings_edit_port_tv">80</string>
    <string name="wifi_proxy_settings_servers_tv">服务器</string>
    <string name="wifi_proxy_settings_edit_servers_tv">0.0.0.0</string>
</resources>