<com.spt.carengine.view.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <com.spt.carengine.view.PercentLinearLayout
        android:id="@+id/ly_bt_key"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_widthPercent="64.58%w"
        android:background="#1f384a"
        android:orientation="vertical" >

        <com.spt.carengine.view.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="25%h"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/num_1"
                style="@style/Call_Button_number"
                app:layout_textSizePercent="60%h"
                app:layout_widthPercent="33.33%w"
                android:text="@string/num_1" />

            <Button
                android:id="@+id/num_2"
                style="@style/Call_Button_number"
                app:layout_textSizePercent="60%h"
                app:layout_widthPercent="33.33%w"
                android:text="@string/num_2" />

            <Button
                android:id="@+id/num_3"
                style="@style/Call_Button_number"
                app:layout_textSizePercent="60%h"
                app:layout_widthPercent="33.34%w"
                android:text="@string/num_3" />
        </com.spt.carengine.view.PercentLinearLayout>

        <com.spt.carengine.view.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="25%h"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/num_4"
                style="@style/Call_Button_number"
                app:layout_textSizePercent="60%h"
                app:layout_widthPercent="33.33%w"
                android:text="@string/num_4" />

            <Button
                android:id="@+id/num_5"
                style="@style/Call_Button_number"
                app:layout_textSizePercent="60%h"
                app:layout_widthPercent="33.33%w"
                android:text="@string/num_5" />

            <Button
                android:id="@+id/num_6"
                style="@style/Call_Button_number"
                app:layout_textSizePercent="60%h"
                app:layout_widthPercent="33.34%w"
                android:text="@string/num_6" />
        </com.spt.carengine.view.PercentLinearLayout>

        <com.spt.carengine.view.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="25%h"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/num_7"
                style="@style/Call_Button_number"
                app:layout_textSizePercent="60%h"
                app:layout_widthPercent="33.33%w"
                android:text="@string/num_7" />

            <Button
                android:id="@+id/num_8"
                style="@style/Call_Button_number"
                app:layout_textSizePercent="60%h"
                app:layout_widthPercent="33.33%w"
                android:text="@string/num_8" />

            <Button
                android:id="@+id/num_9"
                style="@style/Call_Button_number"
                app:layout_textSizePercent="60%h"
                app:layout_widthPercent="33.33%w"
                android:text="@string/num_9" />
        </com.spt.carengine.view.PercentLinearLayout>

        <com.spt.carengine.view.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="25%h"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/num_xin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_textSizePercent="60%h"
                app:layout_widthPercent="33.33%w"
                android:background="@drawable/select_btn_bt_key"
                android:text="@string/num_xing"
                android:textColor="#FFFFFF" />

            <com.spt.carengine.view.PercentLinearLayout
                android:id="@+id/num_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_widthPercent="33.33%w"
                android:background="@drawable/select_btn_bt_key"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_marginLeftPercent="41%w"
                    app:layout_textSizePercent="60%h"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/num_zero"
                    android:textColor="#ffffff" >
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_textSizePercent="30%h"
                    android:gravity="left|top"
                    android:text="@string/num_plus"
                    android:textColor="#ffffff" >
                </TextView>
            </com.spt.carengine.view.PercentLinearLayout>

            <Button
                android:id="@+id/num_jin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_textSizePercent="60%h"
                app:layout_widthPercent="33.34%w"
                android:background="@drawable/select_btn_bt_key"
                android:text="@string/num_jing"
                android:textColor="#FFFFFF" />
        </com.spt.carengine.view.PercentLinearLayout>
    </com.spt.carengine.view.PercentLinearLayout>

    <com.spt.carengine.view.PercentLinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_widthPercent="35.42%w"
        android:background="#1f384a"
        android:orientation="vertical" >

        <com.spt.carengine.view.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="24.81%h"
            android:background="#1f384a"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_call_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_marginRightPercent="1.96%w"
                app:layout_textSizePercent="30%h"
                app:layout_widthPercent="80%w"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF" >
            </TextView>

            <com.spt.carengine.view.PercentRelativeLayout
                android:id="@+id/btn_bt_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_widthPercent="20%w"
                android:background="#1f384a"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_marginRightPercent="1.44%w"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_dial_action_delete" />
            </com.spt.carengine.view.PercentRelativeLayout>
        </com.spt.carengine.view.PercentLinearLayout>

        <com.spt.carengine.view.PercentLinearLayout
            android:id="@+id/btn_bt_dial"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent="75.19%h"
            android:background="@drawable/select_btn_bt_dial_call"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_bt_dial_btn" />
        </com.spt.carengine.view.PercentLinearLayout>
    </com.spt.carengine.view.PercentLinearLayout>

</com.spt.carengine.view.PercentLinearLayout>